add support for dynamic icon on installation button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,3 +89,6 @@ import Footer from "../components/Footer.astro";
     </script>
 </Layout>
 
+<style is:global>
+    [x-cloak] { display: none !important; }
+</style>
