--- a/src/pages/Partials/ToolsSection.astro
+++ b/src/pages/Partials/ToolsSection.astro
@@ -13,9 +13,11 @@ import ffprobeBackground from '../../images/ffplay-background.svg';
 
 ---
 
-<div class="container mx-auto px-4 max-w-6xl isolate">
-    <h3 class="text-center text-2xl sm:text-4xl font-display font-bold">The Right Tool for your Needs</h3>
-    <p class="py-3 text-gray-700 text-center font-medium max-w-lg mx-auto">We provide a variety of CLI tools to get the
+<div class="container mx-auto px-4 max-w-6xl pt-10 isolate">
+    <h3 class="mx-auto text-2xl sm:text-5xl font-display text-center">
+        The Right Tool for your Needs
+    </h3>
+    <p class="max-w-xl text-center mx-auto text-base sm:text-lg py-4 text-gray-500 font-semibold">We provide a variety of CLI tools to get the
         job done fast. Choose ffmpeg, ffplay, ffprobe to get exactly what you want.</p>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 py-8">
@@ -125,8 +127,11 @@ import ffprobeBackground from '../../images/ffplay-background.svg';
         </div>
     </div>
 
-    <h3 class="text-center text-2xl sm:text-4xl font-display font-bold pt-16">FFmpeg Libraries for developers</h3>
-    <p class="py-3 text-gray-700 text-center text-sm sm:text-base font-medium max-w-lg mx-auto">ffmpeg does not only provide tools for end users but also libraries and APIs for developers to use in their custom workflows.</p>
+    <h3 class="mx-auto text-2xl sm:text-5xl pt-12 font-display text-center">
+        FFmpeg Libraries for Developers
+    </h3>
+    <p class="max-w-xl text-center mx-auto text-base sm:text-lg pt-4 text-gray-500 font-semibold">ffmpeg does not only provide tools for end users but also libraries and APIs for developers to use in their custom workflows.</p>
+
     <div class="grid sm:grid-cols-2 gap-6 py-8 sm:py-16">
         <LibraryItem title="libavcodec">
             A library containing decoders and encoders for audio/video codecs.
