--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ToolsSection from "./Partials/ToolsSection.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="FFmpeg - The Swiss-Army-Know for Video and Audio">
     <div class="bg-gradient-to-r from-[#00CB00] to-[#006500] w-full h-3"></div>
     <main class="">
         <div class="relative" style={`background-image: url(${headerBg.src});`}>
