--- a/src/pages/Partials/Hero.astro
+++ b/src/pages/Partials/Hero.astro
@@ -17,7 +17,7 @@ import InstallButton from "../../components/InstallButton.astro";
                     The Swiss-Army-Knife
                     for Video and Audio
                 </h1>
-                <p class="text-base sm:text-xl max-w-md text-gray-700">Transcode, Compress and Edit basically and
+                <p class="text-base sm:text-xl max-w-md text-gray-700">Transcode, Compress and Edit basically any
                     audio
                     or video file in the universe.</p>
                 <div class="pt-7 sm:flex sm:space-x-6 space-y-3 sm:space-y-0">
