Fix typos / consolidate ff/ff to FF

--- a/src/pages/Partials/InstallationInstructions.astro
+++ b/src/pages/Partials/InstallationInstructions.astro
@@ -10,8 +10,8 @@ import InstallButton from "../../components/InstallButton.astro";
 
 <div class="grid sm:grid-cols-7 py-24">
     <div class="col-span-4">
-        <h3 class="text-2xl sm:text-4xl font-display font-semibold pb-2">Install ffmpeg on every platform</h3>
-        <p class="text-gray-700 py-2 max-w-lg">FFMpeg only proved the source code, but you can also install it via many package managers or download builds for your OS on the right side.</p>
+        <h3 class="text-2xl sm:text-4xl font-display font-semibold pb-2">Install FFmpeg on every platform</h3>
+        <p class="text-gray-700 py-2 max-w-lg">FFmpeg only provides its source code, but you can also install it via many package managers or download builds for your OS.</p>
 
         <p class="text-gray-700 py-2 max-w-lg">If you find FFmpeg useful, you are welcome to contribute by donating.</p>
         <div class="sm:flex space-y-5 sm:space-y-0 items-center space-x-5 sm:space-x-10 pt-4 pb-4 sm:pb-0">
