--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ import '@fontsource/reddit-sans/700.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script defer data-domain="ffmpeg.bufferhead.com" src="https://plausible.io/js/script.js"></script>
 	</head>
 	<body>
 		<slot />
